--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,5 @@
 version = 3.8.1
-runner.dialect = scala213source3
+runner.dialect = scala3
 project.git = true
 maxColumn = 120
 align.preset = more
